move src/data/trainers.h file to JSON

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ src/data/items_en.h
 src/data/items_es.h
 src/data/items_it.h
 src/data/heal_locations.h
+src/data/trainers.h
 src/data/wild_encounters.h
 src/data/region_map/region_map_entries.h
 src/data/region_map/region_map_entry_strings.h
