--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ sound/songs/midi/*.s
 src/data/items_en.h
 src/data/items_es.h
 src/data/items_it.h
+src/data/items_fr.h
 src/data/heal_locations.h
 src/data/trainers.h
 src/data/wild_encounters.h
